RESOLVED FIXED274233
[Unified Text Replacement] Selection is not revealed when a replacement's state is updated
https://bugs.webkit.org/show_bug.cgi?id=274233
Summary [Unified Text Replacement] Selection is not revealed when a replacement's sta...
Richard Robinson
Reported 2024-05-15 16:33:23 PDT
Attachments
Richard Robinson
Comment 1 2024-05-15 16:35:34 PDT
EWS
Comment 2 2024-05-15 21:23:02 PDT
Committed 278844@main (2de209523071): <https://commits.webkit.org/278844@main> Reviewed commits have been landed. Closing PR #28628 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.