[Unified Text Replacement] Selection is not revealed when a replacement's state is updated https://bugs.webkit.org/show_bug.cgi?id=274233 rdar://128042855

Reviewed by Wenson Hsieh.

* Source/WebKit/WebProcess/WebPage/Cocoa/UnifiedTextReplacementController.mm:
(WebKit::UnifiedTextReplacementController::textReplacementSessionDidUpdateStateForReplacement):

Canonical link: https://commits.webkit.org/278844@main